--- a/css/howitworks.css
+++ b/css/howitworks.css
@@ -10,21 +10,29 @@
 
 .hero{
     background-image: url("../images/image-42.png");
-    height: 140px;
-    background-position: top;
+    height: 550px;
+    background-position: cover;
     background-repeat: no-repeat;
-    background-size: 100%; 
+    background-size: 100%;
 }
 
 .add-btn{
-    background-color:  #0E0E2C;
+    background-color:  #012762;
     font-size: 8px;
 }
 
 .hero-text{
-    margin-top: 80px;
-    margin-left: 40px;
+    margin-top: 8rem;
+    margin-left: 4rem;
     color: #012762;
+}
+
+.hero-text h4{
+    font-size: 3.5rem;
+}
+
+.text-span{
+    font-size: 2rem;
 }
 
 .select, .heading, .hero-text, .provide, .photo, .review{
@@ -32,13 +40,13 @@
 }
 
 .hero-image{
-    background-image: url("../images/Ellipse-26.png");
+     background-image: url("../images/Ellipse-26.png"); 
     background-repeat: no-repeat;
     background-size: 100%;
-    top: 10%;
-    padding-right: 6rem;
-    padding-bottom: 2rem;
-    padding-top:1rem ;  
+    top: 2%;
+    padding-top:1rem ;
+    width: 580px;
+    height: 350px;
 }
 
 .heading{
@@ -56,7 +64,7 @@
 }
 
 .line-15{  
-    top: 650px;
+    top: 980px;
     right: 400px;
 }
 
@@ -96,17 +104,13 @@
 
 .blue-left{
    left: 0;
-   top: 900px;
+   top: 1200px;
    z-index: -1;
 }
 
 .blue-right{
-    top: 1200px; 
+    top: 1550px; 
     z-index: -1;  
-}
-
-.nath{
-    height: ;
 }
 
  .text{
@@ -139,16 +143,143 @@
   }
 
 
-
-
-@media (min-width:1200px) {
-    .nathTet{
-        height: 500px!important;
+  @media (max-width:1440px) {
+    
+    .hero-image{
+        width: 650px;
     }
 }
 
-@media (max-width:778px) {
+@media (max-width:1024px) {
+    .hero{
+        height: 430px;
+    }
+
+  .hero-image{
+      width: 460px;
+    }
+
+    .nathTet{
+        height: 500px!important;
+    }
+    
+    .hero-text{
+        margin-top: 5rem;
+        margin-left: 3rem;
+    }
+    
+     .text-span{
+        font-size: 1.2rem;
+    }
+    
+    .hero-text h4{
+        font-size: 2.9rem;
+    }
+
+    .line-15{
+        top: 850px;
+        right: 350px;
+
+    }
+
+}
+
+
+@media (max-width:768px) {
     .nath1 img{
         width: 80%!important
     }
+
+    .hero-image{
+       padding-top:1rem ;
+       width: 400px;
+       height: 250px;
+   }
+
+   .hero-text{
+    margin-top: 4rem;
+    margin-left: 2rem;
+    }
+
+.text-span{
+    font-size: 1rem;
+    }
+
+.hero-text h4{
+    font-size: 2rem;
+}
+
+.hero{
+    height: 320px ;
+}
+}
+
+@media (max-width:500px) {
+
+    .hero{
+        height: 180px;
+    }
+
+    .hero-image{
+        width: 200px;
+        height: 140px;
+    }
+
+    .hero-text{
+        margin-top: 1rem;
+        margin-left: 1rem;
+        
+    }
+    .hero-text h4{
+        font-size: 1rem;
+    }
+
+    .text-span{
+        font-size: .7rem;
+    }
+
+    .add-btn{
+        font-size: .4rem;
+    }
+    
+    .select, .provide{
+        padding-bottom: 2.5rem;
+    }      
+}
+
+
+@media (max-width:376px) {
+
+    .hero{
+        height: 150px ;
+    }
+
+    .hero-image{
+        width: 180px;
+        height: 140px;
+    }
+
+    .hero-text{
+        margin-top: .5rem;
+        margin-left: .4rem;
+    }
+    .hero-text h4{
+        font-size: .9rem;
+    }
+
+    .text-span{
+        font-size: .6rem;
+    }
+
+    .add-btn{
+        font-size: .4rem;
+    }
+
+    .num2{
+        right: 250px;
+    } 
+    .review-wraper{
+        padding-top: 3rem;
+        }
+    } 
 }
